tests/error/error23.jan
// error23: Uncalling of a function, which is not defined.

x -> y;

uncall p
